--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-  - name: 'gcr.io/$PROJECT_ID/go'
+  - name: 'gcr.io/cloud-builders/go'
     args: ['install', '.']
     env: ['PROJECT_ROOT=desafioci']
-  - name: 'gcr.io/$PROJECT_ID/go'
+  - name: 'gcr.io/cloud-builders/go'
     args: ['test', 'desafioci']
     env: ['PROJECT_ROOT=desafioci']
-  - name: 'gcr.io/$PROJECT_ID/docker'
+  - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '--tag=gcr.io/$PROJECT_ID/desafioci', '.']
 images: ['gcr.io/$PROJECT_ID/desafioci']
